--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -3,9 +3,9 @@
 
     <title>Daily WordReference</title>
     <link href="https://daily.wordreference.com/"/>
-    <updated>2003-12-13T18:30:02Z</updated>
+    <updated>{{ entries[0].updated }}</updated>
     <author>
-        <name>WordRefenrece</name>
+        <name>WordReference</name>
     </author>
     <id>id</id>
 
