--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -13,7 +13,9 @@
         <link href="{{ entry.link }}"/>
         <id>{{ entry.id }}</id>
         <updated>{{ entry.updated }}</updated>
-        <summary>{{ entry.summary }}</summary>
+        <content type="html"><![CDATA[
+            {{ entry.summary }}
+        ]]</content>
     </entry>
     {% endfor %}
 </feed>
