--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -13,7 +13,7 @@
         <link href="{{ entry.link }}"/>
         <id>{{ entry.id }}</id>
         <updated>{{ entry.updated }}</updated>
-        <content type="html"><![CDATA[{{ entry.summary }}]]></content>
+        <content type="html"><![CDATA[{{ entry.summary|raw|spaceless }}]]></content>
     </entry>
     {% endfor %}
 </feed>
