--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -2,7 +2,7 @@
 <feed xmlns="http://www.w3.org/2005/Atom">
     <title>Daily WordReference</title>
     <link rel="self" href="https://github.com/alejgarciarodriguez/atom-feed/blob/master/feed/atom.xml"/>
-    <updated>{{ entries[0].updated }}</updated>
+    <updated>{{ last_updated }}</updated>
     <author>
         <name>WordReference</name>
     </author>
