--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -11,7 +11,7 @@
     <entry>
         <title>{{ entry.title }}</title>
         <link href="{{ entry.link }}"/>
-        <id>{{ entry.id }}</id>
+        <id>{{ entry.link }}</id>
         <updated>{{ entry.updated }}</updated>
         <content type="html"><![CDATA[{{ entry.summary|raw|spaceless }}]]></content>
     </entry>
