--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -11,6 +11,7 @@
     <entry>
         <title>{{ entry.title }}</title>
         <link href="{{ entry.link }}"/>
+        <icon>{{ entry.icon }}</icon>
         <id>{{ entry.link }}</id>
         <updated>{{ entry.updated }}</updated>
         <content type="html"><![CDATA[{{ entry.summary|raw|spaceless }}]]></content>
