--- a/templates/atom.twig.xml
+++ b/templates/atom.twig.xml
@@ -6,12 +6,12 @@
     <author>
         <name>WordReference</name>
     </author>
+    <icon>https://s3.amazonaws.com/libapps/accounts/59856/images/wr.png</icon>
     <link>https://daily.wordreference.com/"</link>
     {% for entry in entries %}
     <entry>
         <title>{{ entry.title }}</title>
         <link href="{{ entry.link }}"/>
-        <icon>{{ entry.icon|raw }}</icon>
         <id>{{ entry.link }}</id>
         <updated>{{ entry.updated }}</updated>
         <content type="html"><![CDATA[{{ entry.summary|raw|spaceless }}]]></content>
